- remove depth indicators as not needed now that comments layers are clearly defined - new comment classes .downvoted and .revealed to have more precise CSS selectors - hide the voting block from comments when collapsed as the block is too narrow, it breaks the layout. It does not make sense to vote/downvote without reading a comment anyway. - tweaked and added more precise CSS selectors (for precedence) to fix the border issues with children comments of downvoted comments

--- a/src/app/components/cards/Comment.scss
+++ b/src/app/components/cards/Comment.scss
@@ -43,7 +43,10 @@
   }
 }
 
-.Comment.collapsed {
+.Comment.collapsed:not(.downvoted),
+.Comment.collapsed.downvoted.revealed .Comment__body,
+.Comment.downvoted.revealed .Comment.collapsed:not(.downvoted),
+.Comment.downvoted .downvoted {
   > .Comment__Userpic {
     top: 0;
     left: 26px;
@@ -56,6 +59,7 @@
     .Voting {
       margin-left: 1rem;
       border-right: none;
+      display: none;
     }
     a {
       @include themify($themes) {
@@ -64,12 +68,16 @@
     }
   }
   .Comment__body {
-    padding: 0;
-    border: none;
+    @include themify($themes) {
+      padding: 0;
+      border: none;
+    }
   }
   .Comment__footer {
-    padding: 0;
-    border: none;
+    @include themify($themes) {
+      padding: 0;
+      border: none;
+    }
   }
 }
 
@@ -105,7 +113,8 @@
   }
 }
 
-.Comment__body {
+.Comment .Comment__body,
+.Comment.downvoted.revealed:not(.collapsed) .Comment__body {
   @include themify($themes) {
     margin-left: 62px;
     max-width: 50rem;
@@ -116,7 +125,8 @@
   }
 }
 
-.Comment__footer {
+.Comment .Comment__footer,
+.Comment.downvoted.revealed:not(.collapsed) .Comment__footer {
   @include themify($themes) {
     margin-left: 62px;
     border: themed('border');
